# CCC-ML-Project

./: .gitignore  Chagas_DB_3_Cleaning_me.xlsx  README.md  pyproject.toml  requirements.txt
not_my_data/: Chagas_DB_3.xlsx  Chagas_DB_clean.xlsx
notebooks/: Cleaning.ipynb  Complicaciones_Totales.ipynb  Entrenamiento.ipynb  Exploracion_Dataset.ipynb  Lasso_Cox.ipynb  cox_notebook.ipynb
src/: __init__.py  config.py
src/analysis/: __init__.py  cox_regressor.py  exploration.py
src/data/: __init__.py  loaders.py  preprocessing.py
src/modeling/: __init__.py  advanced.py  evaluation.py  feature_selection.py  metrics.py  model_registry.py  sampling.py  synthetic.py
src/pipelines/: __init__.py  common.py  complicaciones.py  entrenamiento.py  exploracion.py  mortalidad.py
